# Mellis

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  CTestTestfile.cmake  RISCVTargetParserTableGen.vcxproj  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Status.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  build_log.txt  cmake_install.cmake  intrinsics_gen.vcxproj  intrinsics_gen.vcxproj.filters  llvm.ir  mellis.slnx  mellis.vcxproj  mellis.vcxproj.filters  mellis_rt.vcxproj  mellis_rt.vcxproj.filters  omp_gen.vcxproj  scratch_patch_cmake.py  scratch_patch_cmake2.py  scratch_patch_cmake3.py  test_ast_manual.vcxproj  test_ast_manual.vcxproj.filters  test_borrow_checker.vcxproj  test_borrow_checker.vcxproj.filters  test_cfg.vcxproj  test_cfg.vcxproj.filters  test_diagnostic.vcxproj  test_diagnostic.vcxproj.filters  test_executable_generator.vcxproj  test_executable_generator.vcxproj.filters  test_lexer.vcxproj  test_lexer.vcxproj.filters  test_llvmir_generator.vcxproj  test_llvmir_generator.vcxproj.filters  test_mvir_generator.vcxproj  (+7 more)
docs/: BaoCao.docx  MVIR.md  PROJECT_STATUS.md  VISION.MD  architecture.docx  architecture.md  ast.md  grammar.md  implementation_plan.md  log.txt
examples/: ex.fl  example.fl
src/: main.cpp
tests/: CMakeLists.txt  test_ast_manual.cpp  test_cfg.cpp  test_executable_generator.cpp  test_flir_generator.cpp  test_lexer.cpp  test_llvmir_generator.cpp  test_macro.cpp  test_mlib.cpp  test_module_loader.cpp  test_mvir_generator.cpp  test_parser.cpp  test_resolver.cpp  test_sematic.cpp  test_standard_exprs.ms  (+2 more)
(+112 files in other folders)
